# chert

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  TODO.md  UPGRADE_TODO.md  pyproject.toml  requirements-test.txt  requirements.in  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  tests.yml
.omp/skills/release/: SKILL.md
chert/: __init__.py  __main__.py  atom.xml  chert.py  cli.py  core.py  fal.py  feed.py  hypertext.py  log.py  parsers.py  rss.xml  toc.py  utils.py  version.py
chert/scaffold/: .gitignore  README.md  TODO.md  chert.yaml  config.json  config.yaml  custom.py
chert/scaffold/assets/css/: main.css
chert/scaffold/entries/: about.md  new_post.md  welcome.md
chert/scaffold/layouts/: entry.html
chert/scaffold/site/css/: #main.css#
chert/scaffold/theme/: archive_brief.html  base.html  entry.html
chert/scaffold/theme/css/: sedimental.css
chert/scaffold/themes/sedimental/: archive_brief.html  base.html  content.html  entry.html
chert/scaffold_ideal/: custom.py
chert/scaffold_ideal/entries/: welcome2.md
chert/scaffold_ideal/theme/: base.html  entry.html
chert/scaffold_old/assets/css/: main.css
chert/scaffold_old/entries/: welcome.md
chert/scaffold_old/layouts/: atom.xml  entry.html
chert/scaffold_old/site/: colophon.html  colophon_ii.html  index.html  welcome_to_chert_ii.html
chert/sedimental_theme/: index.html
chert/sedimental_theme/css/: sedimental.css
tests/: test_chert.py  test_core.py  test_hypertext.py  test_parsers.py  test_sedimental.py  test_utils.py
(+3 files in other folders)
